--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -10,7 +10,7 @@
 {% set paginationblock = pagination.time_pagination(selected_date, 'queue.history') %}
 
 {% block content %}
-    <h1>Build and Push History</h1>
+    <h1>Build and Release History</h1>
 
     {{ paginationblock }}
 
