--- a/templates/queue.twig
+++ b/templates/queue.twig
@@ -4,7 +4,7 @@
 {% set page_title = "Queue" %}
 
 {% block content %}
-    <h1>Build and Deployment Queue</h1>
+    <h1>Build and Release Queue</h1>
 
     {% include '_partial-job/pending-table.twig' with {'pending': pending} only %}
 
