--- a/templates/group/group.twig
+++ b/templates/group/group.twig
@@ -6,7 +6,7 @@
 {% set isAdmin = current_authorizations.isSuper() %}
 
 {% block content %}
-<h1>Group - {{ group.format(false) }} <b>{{ group.environment().name() }}</b></h1>
+<h1>Group - {{ group.format(false) }} <b>{{ group.environment.name }}</b></h1>
 
     {% set name_label =  group.type == 'rsync' ? 'Hostname' : 'Region' %}
 
@@ -46,6 +46,9 @@
                         <th>CD Group</th>
                         <th>CD Configuration</th>
 
+                    {% elseif group.type == 'script' %}
+                        <th>Context</th>
+
                     {% else %}
                         <th>Path</th>
                     {% endif %}
@@ -64,22 +67,25 @@
 
                     {% if group.type == 'eb' %}
 
-                        <td><code>{{ target.ebName }}</code></td>
-                        <td><code>{{ target.ebEnvironment }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_APP', target)) }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_ENV', target)) }}</code></td>
 
                     {% elseif group.type == 's3' %}
 
-                        <td><code>{{ target.s3bucket }}</code></td>
-                        <td><code>{{ target.s3file }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_BUCKET', target)) }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_SOURCE', target)) ?: '$APPID/$PUSHID.zip' }}</code></td>
 
                     {% elseif group.type == 'cd' %}
 
-                        <td><code>{{ target.cdName }}</code></td>
-                        <td><code>{{ target.cdGroup }}</code></td>
-                        <td><code>{{ target.cdConfiguration }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_APP', target)) }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_GROUP', target)) }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_CONFIG', target)) }}</code></td>
+
+                    {% elseif group.type == 'script' %}
+                        <td><code>{{ target.parameter(constant('PARAM_CONTEXT', target)) ?: 'None'  }}</code></td>
 
                     {% else %}
-                        <td><code>{{ target.path }}</code></td>
+                        <td><code>{{ target.parameter(constant('PARAM_PATH', target))  }}</code></td>
                     {% endif %}
 
                     <td>
