--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -23,7 +23,10 @@
                     <div class="fav-box">
                         <h5>{{ application.name }}</h5>
                         <p>
-                            <a href="{{ uriFor('application.dashboard', {'application': application.id}) }}">App Status</a> | <a href="{{ uriFor('build.start', {'application': application.id}) }}">Start Build</a>
+                            <a href="{{ uriFor('application.dashboard', {'application': application.id}) }}">App Status</a>
+                            {% if current_authorizations.canBuild(application) %}
+                                | <a href="{{ uriFor('build.start', {'application': application.id}) }}">Start Build</a>
+                            {% endif %}
                         </p>
                     </div>
                 {% endfor %}
