--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -24,7 +24,11 @@
 
     <p>Permissions can be granted to a user on the <b>Users</b> page, or to a user for an application on the <b>Manage Application</b> page.</p>
 
-    {{ block('anchor_nav') }}
+    <ul>
+        <li><a href="#app-owners">Application Owners</a></li>
+        <li><a href="#app-members">Application Members</a></li>
+        <li><a href="#super">Hal Administrators</a></li>
+    </ul>
 
     <h2 id="app-owners">Application Owners</h2>
     {% if owners %}
@@ -65,8 +69,8 @@
         <p>There are no application owners.</p>
     {% endif %}
 
-    <h2 id="deploy">Deployment Permissions</h2>
-    {% if deploy %}
+    <h2 id="app-members">Application Members</h2>
+    {% if members %}
         <table class="table--spacing-medium table--striped">
             <thead>
                 <tr>
@@ -76,7 +80,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for permission in deploy %}
+                {% for permission in members %}
                     {% set user = permission.user %}
 
                     <tr>
@@ -89,6 +93,7 @@
                                 <li>
                                     <a href="{{ uriFor('application', {'application': perm.application.id}) }}">{{ perm.application.name }}</a>
                                     {% if can_remove %}
+                                        {#TODO::remove permssion#}
                                         (<a style="color:red;" href="{{ uriFor('admin.permissions.deployment.remove', {'user': user.id, 'user_permission': perm.id}) }}">Remove</a>)
                                     {% endif %}
                                 </li>
@@ -100,65 +105,44 @@
             </tbody>
         </table>
     {% else %}
-        <p>No users have deployment permissions.</p>
+        <p>No users have member permissions.</p>
     {% endif %}
-
-    <h2 id="admin">Deployment Adminstrators</h2>
-    {{ page_macros.userTable(user_types.btn_pusher, 'btn_pusher', can_remove) }}
 
     <h2 id="super">Hal Administrators</h2>
-    {{ page_macros.userTable(user_types.super, 'super', can_remove_super) }}
-
-    <h2>User Types</h2>
-    {% include 'user/partial.user-legend.twig' %}
-
-{% endblock %}
-
-{% block anchor_nav %}
-    <ul>
-        <li><a href="#app-owners">Application Owners</a></li>
-        <li><a href="#deploy">Deployment Permissions</a></li>
-        <li><a href="#admin">Deployment Adminstrators (prod)</a></li>
-        <li><a href="#super">Hal Adminstrators (non-prod)</a></li>
-    </ul>
-{% endblock %}
-
-{% macro userTable(users_by_type, can_remove) %}
-    {% import "macros.twig" as macros %}
-
-    {% if users_by_type %}
+    {% if admins %}
         <table class="table--spacing-medium table--striped">
             <thead>
-                <tr>
-                    <th class="t20">Username</th>
-                    <th>Email</th>
+            <tr>
+                <th class="t20">Username</th>
+                <th>Email</th>
 
-                    {% if can_remove %}
-                        <th></th>
-                    {% endif %}
-                </tr>
+                {% if can_remove %}
+                    <th></th>
+                {% endif %}
+            </tr>
             </thead>
             <tbody>
-                {% for type in users_by_type %}
-                    {% set user = type.user %}
+            {% for admin in admins %}
+                {% set user = admin.user %}
 
-                    <tr>
-                        <td><a href="{{ uriFor('user', {'user': user.id}) }}">{{ user.username }}</a></td>
-                        <td>{{ user.email }}</td>
+                <tr>
+                    <td><a href="{{ uriFor('user', {'user': user.id}) }}">{{ user.username }}</a></td>
+                    <td>{{ user.email }}</td>
 
-                        {% if can_remove %}
-                            <td class="tr">
-                                <a style="color:red;" href="{{ uriFor('admin.permissions.type.remove', {'user': user.id, 'user_type': type.id}) }}">Remove</a>
-                            </td>
-                        {% endif %}
+                    {% if can_remove %}
+                        <td class="tr">
+                            <a style="color:red;" href="{{ uriFor('admin.permissions.type.remove', {'user': user.id, 'user_type': type.id}) }}">Remove</a>
+                        </td>
+                    {% endif %}
 
-                    </tr>
-                {% endfor %}
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
-
     {% else %}
-        <p>There are no users of this type.</p>
+        There are no hal administrators.
     {% endif %}
 
-{% endmacro %}
+    <h2>User Types</h2>
+    {% include 'user/partial.user-types.twig' %}
+{% endblock %}
