--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -5,8 +5,7 @@
 
 {% set page_title = "Status : " ~ application.name %}
 
-{#{% set canUserBuild = canUserBuild(current_user, application) %}#}
-{% set canUserBuild = true %}
+{% set canUserBuild = current_authorizations.canBuild(application) %}
 {% set isBusinessTime = is_serious_business_mode %}
 
 {% block content %}
@@ -22,7 +21,7 @@
 
         <h2>Recent Builds - <b>{{ selected_environment.name }}</b></h2>
         {% set isPushable = deployment_statuses|length > 0 %}
-        {% include '_partial-job/build-table.twig' with {'builds': builds, 'isPushable': isPushable } %}
+        {% include '_partial-job/build-table.twig' with {'builds': builds, 'isPushable': isPushable, 'current_authorizations': current_authorizations } %}
 
         {{ block('page_buttons') }}
     {% else %}
@@ -30,7 +29,7 @@
         <p>This application has no deployment targets configured and cannot be released.</p>
 
         <h2>Recent Builds</h2>
-        {% include '_partial-job/build-table.twig' with {'builds': builds, 'isPushable': isPushable } %}
+        {% include '_partial-job/build-table.twig' with {'builds': builds, 'isPushable': isPushable, 'current_authorizations': current_authorizations } %}
 
         {{ block('page_buttons') }}
 
