--- a/templates/release/rollback.twig
+++ b/templates/release/rollback.twig
@@ -51,10 +51,7 @@
         To rollback, simply choose a build, click <b>rollback</b>, and you'll be able to initate a new release.
     </p>
 
-    {#TODO::permissions#}
-    {#{% set canRollback = canUserPush(current_user, application, target.group.environment) %}#}
-    {% set canRollback = true %}
-
+    {% set canRollback = current_authorizations.canDeploy(application, target.group.environment) %}
 
     <h2>Release History</h2>
     <table class="table--spacing-medium">
