credential edit, view applications, safe delete

--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -38,7 +38,11 @@
             <tbody>
                 {% for credential in credentials %}
                     <tr>
-                        <td>{{ credential|shortGUID }}</td>
+                        {% if is_admin %}
+                            <td><a href="{{ uriFor('credential', {'credential': credential.id}) }}">{{ credential|shortGUID }}</a></td>
+                        {% else %}
+                            <td>{{ credential|shortGUID }}</td>
+                        {% endif %}
                         <td>
                             {% if credential.isInternal %}
                                 {{ macros.icon('locked') }}
